# hospital-qt

./: .gitignore  CMakeLists.txt  README.md
docs/: struct_bd.psql
include/: DoctorWindow.hpp  PatientWindow.hpp  RegistrarWindow.hpp  RegistrationWindow.hpp  database.hpp
src/: DoctorWindow.cpp  PatientWindow.cpp  RegistrarWindow.cpp  RegistrationWindow.cpp  database.cpp  main.cpp
